# metric-collector

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .sops.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  renovate.json
.github/: pull_request_template.md
.github/workflows/: _build_and_publish.yml  _set_version.yml  deploy.yml  pull_request.yml  release.yml  set_version.yml
secrets/: .env.dev  .env.production  .env.qa  .env.staging
src/: controllers.rs  github_client.rs  main.rs  utils.rs
src/configs/: mod.rs
src/github_models/: mod.rs
src/helpers/: mod.rs
src/metric_models/: mod.rs
