[package]
name = "metric-collector"
version = "0.0.8"
edition = "2021"

[dependencies]
config = "0.14.1"
dotenv = "0.14.1"
reqwest = { version = "0.12.9", features = ["json"]}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4"
openssl = { version = "0.10", optional = true }
