[package]
name = "metric-collector"
version = "0.0.15"
edition = "2021"

[dependencies]
config = "0.15.4"
dotenv = "0.15.0"
reqwest = { version = "0.12.11", features = ["json"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full", "test-util"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = { version = "0.4.39", features = ["serde"] }
actix-web = "4"
openssl = { version = "0.10", optional = true }
